# cc_web_scraper_cmd

./: .gitignore  README.MD  docker-compose.yml  env.example  pyproject.toml
src/web_scraper/: __init__.py  cli.py  config.py
src/web_scraper/config/: __init__.py  config.py  logging_conf.py
src/web_scraper/database/: __init__.py  client.py
src/web_scraper/entity/: models.py
src/web_scraper/scraping/: base_scraper.py
src/web_scraper/scraping/site_specific/: example_site.py
src/web_scraper/services/: __init__.py  base_scraper_service.py  eyewiki_service.py  medicalnewstoday_service.py  scrapeable.py
src/web_scraper/utils/: logging.py
